[gd_scene load_steps=2 format=3 uid="uid://crq8ghb1q5p7l"]

[ext_resource type="Script" path="res://scenes/main/Main.gd" id="1_3vhj2"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3vhj2")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HeaderLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "FE Map Creator - Test Scene"
horizontal_alignment = 1

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Choose an action to begin testing"

[node name="ButtonContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="InitializeButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Initialize AssetManager"

[node name="LoadMapButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
disabled = true
text = "Load Test Map"

[node name="TestAllButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
disabled = true
text = "Run All Tests"

[node name="QuickDemoButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
disabled = true
text = "Quick Demo"

[node name="GenerateMapButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
disabled = true
text = "Generate Maps"

[node name="OutputTextEdit" type="TextEdit" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "Output will appear here..."
editable = false
